--- a/estoqueCompleto.html
+++ b/estoqueCompleto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estoque Completo - Sistema Bundy</title>
-    <link rel="stylesheet" href="../contagem-main/style/estoqueC.css">
+    <link rel="stylesheet" href="../style/estoqueC.css">
   </head>
 
   <body>
