--- a/estoqueCompleto.html
+++ b/estoqueCompleto.html
@@ -75,7 +75,7 @@
       </section>
     </main>
 
-    <script src="../contagem-main/script/estoqueLogica.js"></script>
+    <script src="../script/estoqueLogica.js"></script>
 
     <script>
       const sidebar = document.getElementById('sidebar');
