Update stylesheet and script paths in HTML

--- a/estoqueCompleto.html
+++ b/estoqueCompleto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estoque Completo - Sistema Bundy</title>
-    <link rel="stylesheet" href="../style/estoqueC.css">
+    <link rel="stylesheet" href="./style/estoqueC.css">
   </head>
 
   <body>
@@ -75,7 +75,7 @@
       </section>
     </main>
 
-    <script src="../script/estoqueLogica.js"></script>
+    <script src="./script/estoqueLogica.js"></script>
 
     <script>
       const sidebar = document.getElementById('sidebar');
